<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#92C4D7">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="** Rules **"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingBottom="15dp"
            android:textColor="#FF0505"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_setup"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/character_movement"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:textColor="#000000"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="** Game Flow **"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingBottom="15dp"
            android:textColor="#000000"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_flow"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/winning_the_game"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bonus_challenges_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            android:textColor="#FF0505"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hero3"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dynamic_team_composition"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spectator_mode"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chat_feature"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ai_opponent"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/replay_system"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ranking_system"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:textColor="#000000"/>

    </LinearLayout>

</ScrollView>
